docs: add development notes and pre-production requirements
CLAUDE.md:
- Emphasize multi-repo commit/PR coordination
- Add Windows/Git Bash path format note

08-DevelopmentStandards.md:
- Add Common Testing Pitfalls section
- Document SecurityConfig dependency issue with @WebMvcTest

10-FutureFeatures.md:
- Add Pre-Production Requirements section under Security
- Document JWT key sharing requirement for production
- Document 401 response configuration requirement

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>